service.yml
apiVersion: v1
kind: Service
metadata:
  name: peopleapi-svc
  namespace: monitoring
labels:
  operated-prometheus: true  
spec:
  selector:
    app: peopleapi
    deploymentconfig: peopleapi
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      name: 7000-tcp
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: web
